#216 Generator should automatically create the scroll choice ram variable